--- a/app/src/main/res/layout/layout_nevheader.xml
+++ b/app/src/main/res/layout/layout_nevheader.xml
@@ -266,6 +266,49 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="@color/gray" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/_7sdp"
+            android:paddingBottom="@dimen/_7sdp"
+            android:id="@+id/rl_instagram"
+            android:onClick="onClick">
+
+            <ImageView
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_instagram"
+                android:id="@+id/ic_insta"
+                app:tint="@color/colorPrimary" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_centerVertical="true"
+                android:text="Instagram"
+                android:layout_toRightOf="@+id/ic_insta"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp"
+                fontPath="@string/font_medium"
+                tools:ignore="RtlHardcoded,MissingPrefix"/>
+            <ImageView
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_1sdp"
+                android:padding="@dimen/_6sdp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_next"/>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/gray" />
 
         <RelativeLayout
             android:layout_width="match_parent"
